Latest version of all German files
Copy of the latest version of all language related files.

--- a/de_DE/webapp/src/main/webapp/i18n/vivo_all_de_DE.properties
+++ b/de_DE/webapp/src/main/webapp/i18n/vivo_all_de_DE.properties
@@ -820,7 +820,7 @@ orcid_step1_confirm = Step 1: Adding your ORCID iD
 
 orcid_step1_description = <ul><li>VIVO redirects you to ORCID's web site.</li> \
 <li>You log in to your ORCID account. <ul class="inner"><li>If you don't have an account, you can create one.</li></ul></li> \
-<li>You tell ORCID that VIVO may read your ORCID record. (one-time permission)</li> \
+<li>You tell ORCID that VIVO may read your ORCID record.</li> \
 <li>VIVO reads your ORCID record.</li> \
 <li>VIVO notes that your ORCID iD is confirmed.</li></ul>
 
@@ -835,7 +835,7 @@ orcid_step1_confirmed = <p>Your ORCID iD is confirmed as {0}</p>
 orcid_step2_heading = Step 2 (recommended): Linking your ORCID record to VIVO
 
 orcid_step2_description = <ul><li>VIVO redirects you to ORCID's web site</li> \
-<li>You tell ORCID that VIVO may add an "external ID" to your ORCID record. (one-time permission)</li> \
+<li>You tell ORCID that VIVO may add an "external ID" to your ORCID record.</li> \
 <li>VIVO adds the external ID.</li></ul>
 
 orcid_step2_already_present = <p>Your ORCID record already includes a link to VIVO.</p>
